--- a/views/about.html
+++ b/views/about.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>About</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
  <h1>This is an About page.</h1>
