--- a/views/contact.html
+++ b/views/contact.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Contact</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
   <h1>This is a contact page.</h1>
