--- a/views/home.html
+++ b/views/home.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Welcome</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
   <h1>Wecome to our app.</h1>
